fixed some test errors
this just fixes bad call by reference cases and a wrong parameter order.
There are still failing test cases, but I haven't figured out how these
magic string comparisons are supposed to work.

--- a/build.xml
+++ b/build.xml
@@ -26,6 +26,7 @@
 
     <target name="test" description="Run PHPUnit Tests">
         <mkdir dir="${reports.dir}/phpunit"/>
+        <mkdir dir="${tests.dir}/action_logs"/>
         <phpunit haltonerror="true" haltonfailure="true" printsummary="true">
             <batchtest>
                 <fileset dir="${tests.dir}">
